# notify

./: .gitignore  README.md  build_deb_package.sh  build_windows.bat  webhook.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  z-adr-template.md
.github/workflows/: client.yml  comment.md  server.yml
backend/: .env  Cargo.toml  README.md
backend/coldchain/: Cargo.toml  README.md
backend/coldchain/src/: alerts.rs  latest_temperature.rs  latest_temperatures.rs  lib.rs  parse.rs  process.rs  sensor_info.rs  sensor_state.rs
backend/coldchain/src/test/: mod.rs  process.rs
backend/coldchain/templates/coldchain/telegram/: temperature.html
backend/configuration/: base.yaml  example.yaml
backend/datasource/: Cargo.toml
backend/datasource/src/: connection_pool.rs  database_settings.rs  json_query.rs  lib.rs  recipient.rs
backend/graphql/: Cargo.toml  lib.rs  logger.rs  playground.html
backend/graphql/core/: Cargo.toml
backend/graphql/core/src/: lib.rs  standard_graphql_error.rs
backend/graphql/datasource/: Cargo.toml
backend/graphql/datasource/src/: lib.rs
backend/graphql/datasource/src/types/: mod.rs  query_result.rs
backend/graphql/general/: Cargo.toml
backend/graphql/notification_config/: Cargo.toml
backend/graphql/notification_config/src/: lib.rs
backend/graphql/notification_event/: Cargo.toml  README.md
backend/graphql/notification_event/src/: lib.rs
backend/graphql/notification_query/: Cargo.toml
backend/graphql/notification_query/src/: lib.rs
backend/graphql/recipient/: Cargo.toml
backend/graphql/recipient/src/: lib.rs
backend/graphql/recipient_list/: Cargo.toml
backend/graphql/recipient_list/src/: lib.rs
backend/graphql/telegram/: Cargo.toml
backend/graphql/telegram/src/: lib.rs  types.rs
backend/graphql/telegram/src/mutations/: mod.rs
backend/graphql/telegram/src/queries/: chatids.rs  mod.rs
backend/graphql/types/: Cargo.toml
backend/graphql/user_account/: Cargo.toml
backend/graphql/user_account/src/: lib.rs
backend/repository/: Cargo.toml
backend/repository/migrations/2023-08-07-012802_create_recipient/: down.sql  up.sql
backend/repository/migrations/2023-08-08-025051_create_recipient_list/: down.sql  up.sql
backend/repository/migrations/2023-08-08-060900_create_recipient_list_member/: down.sql  up.sql
backend/repository/migrations/2023-08-16-212010_add_nickname_to_user_account/: up.sql
backend/repository/migrations/2023-08-17-042604_create_notification_event/: down.sql  up.sql
backend/repository/migrations/2023-08-21-044542_add_deleted_datetime_to_recipient/: up.sql
backend/repository/migrations/2023-08-21-221727_create_notification_config/: up.sql
backend/repository/migrations/2023-08-22-002321_add_deleted_and_type_to_recipient_ux/: down.sql  up.sql
backend/repository/migrations/2023-08-24-213024_create_notification_config_recipients_and_lists/: down.sql  up.sql
backend/repository/migrations/2023-08-29-004449_recipient_list_sql/: up.sql
backend/repository/migrations/2023-09-01-003806_sql_recipient_list/: down.sql  up.sql
backend/repository/migrations/2023-09-10-231506_notification_attempts/: up.sql
backend/repository/migrations/2023-09-10-235733_notification_config_params/: up.sql
backend/repository/migrations/2023-09-12-012051_add_status_to_notification_config/: up.sql
backend/repository/migrations/2023-09-18-034908_last_check_datetime/: up.sql
backend/repository/migrations/2023-09-18-034909_due_datetime/: up.sql
backend/repository/migrations/2023-09-20-215415_notification_query_table/: down.sql  up.sql
backend/repository/migrations/2023-09-25-031335_recipient-notification-config/: up.sql
backend/repository/migrations/2023-10-05-041427_plugin_store/: down.sql  (+1 more)
backend/repository/src/: database_settings.rs  lib.rs  test_db.rs  tests.rs
backend/scheduled/: Cargo.toml
backend/scheduled/src/: lib.rs  parse.rs  process.rs  query.rs
backend/server/: Cargo.toml
backend/server/src/: auto_backup.rs  configuration.rs  lib.rs  main.rs  scheduled_tasks.rs  serve_frontend.rs  static_files.rs
backend/service/: Cargo.toml
backend/service/src/: audit_log.rs  auth.rs  lib.rs  login.rs  plugin.rs  service_provider.rs  settings.rs  test_utils.rs
backend/service/telegram/: Cargo.toml
backend/telegram/: Cargo.toml
backend/telegram/src/: lib.rs
backend/telegram/src/client/: mod.rs
backend/telegram/src/service/: get_updates_poller.rs  markdown.rs  mod.rs  processor.rs  responder.rs
backend/templates/: hello_world.html
backend/templates/coldchain/: no_data.html  no_data.md  no_data_title.html  no_data_title.md  recovered.html  recovered.md  recovered_title.html  temperature.html  temperature.md  temperature_title.html
backend/templates/default/: body.html  body.md
backend/templates/test_message/: email.md  email_subject.html  telegram.html
backend/util/: Cargo.toml
backend/util/emails/: email_test.rs
backend/util/src/: lib.rs  validate.rs
backend/windows/src/: windows.rs
docs/: faq.md  notification_setup.md  schema.md
docs/decisions/: 001-multitenant.md  002-parameters.md
docs/tutorial/: 0.tutorials.md  1.adding_a_field.md
frontend/: README.md  codegen.yml  jest-setup.ts  jest.config.js  package.json  tsconfig.json
frontend/.husky/: pre-commit  sort-json-abc.js
tera-web/: Cargo.toml  README.md
tera-web/src/: lib.rs
(+190 files in other folders)
