[package]
name = "coldchain"
version = "0.1.0"
edition = "2021"

[dependencies]
telegram = { path = "../telegram" }
service = { path = "../service" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }