[package]
name = "coldchain"
version = "0.1.0"
edition = "2018"

[dependencies]
repository = { path = "../repository" }
telegram = { path = "../telegram" }
service = { path = "../service" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }

[features]
telegram-tests = ["service/telegram-tests"]
email-tests = ["service/email-tests"]
