[package]
name = "datasource"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
diesel = { version = "2.1", features = ["postgres", "serde_json","chrono", "r2d2"] }
serde_json = {version="1.0.66"}
serde = {version = "1.0.126", features = ["derive"]}

[features]
default = ["datasource-tests"]
datasource-tests = []