[package]
name = "scheduled"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repository = { path = "../repository" }
service = { path = "../service" }
tokio = { version = "1", features = ["macros"] }
log = "0.4"
chrono = {version = "0.4"}