[package]
name = "telegram"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] } 
http = "0.2"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.66"
serde = { version = "1.0.126", features = ["derive"] }
log = "0.4.14"

[features]
telegram-tests = []